--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,7 @@
 
 @layer components {
     .pagination {
-        @apply inline-block py-1 px-3 border border-gray-300 text-gray-500 hover:bg-gray-100 hover:text-gray-700 transition-all duration-300
+        @apply inline-block py-1 px-3 border border-gray-300 text-gray-500 hover:bg-gray-100 hover:text-gray-700 transition-all duration-300 cursor-pointer
     }
 }
 
@@ -29,11 +29,14 @@
 .text_prew {
     @apply text-sm md:text-base text-gray-500 hover:font-medium dark:text-gray-400
 }
+@layer components {
+    .container_news_title {
+        @apply mb-4 font-bold text-2xl text-gray-700 hover:text-gray-900 dark:text-gray-400 dark:hover:text-gray-500
+    }  
+}
 
 .container_news {
     @apply mb-8 ml-2 mr-2 p-8 border-t-2 border-gray-100 dark:border-gray-800 shadow-lg shadow-gray-400 dark:shadow-gray-700
 }
 
-.container_news_title {
-    @apply mb-4 font-bold text-2xl text-gray-700 hover:text-gray-900 dark:text-gray-400 dark:hover:text-gray-500
-}
+
