--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,7 @@
 
 @layer components {
     .pagination {
-        @apply inline-block py-1 px-3 border border-gray-300 text-gray-500 hover:bg-gray-100 hover:text-gray-700 transition-all duration-300 cursor-pointer
+        @apply inline-block py-1 px-2.5 border border-gray-300 text-gray-500 hover:bg-gray-100 hover:text-gray-700 transition-all duration-300 cursor-pointer
     }
 }
 
@@ -36,7 +36,28 @@
 }
 
 .container_news {
-    @apply mb-8 ml-2 mr-2 p-8 border-t-2 border-gray-100 dark:border-gray-800 shadow-lg shadow-gray-400 dark:shadow-gray-700
+    @apply mb-8 ml-2 mr-2 p-2 lg:p-8 border-t-2 border-gray-100 dark:border-gray-800 shadow-lg shadow-gray-400 dark:shadow-gray-700
+}
+.el-select-v2__wrapper {
+    border: 2px solid black !important;
 }
 
+.el-select-v2__wrapper:hover {
+    border: 4px solid #409eff !important;
+    transition: all;
+}
 
+@layer utilities {
+    @variants responsive {
+      /* Hide scrollbar for Chrome, Safari and Opera */
+      .no-scrollbar::-webkit-scrollbar {
+          display: none;
+      }
+
+      /* Hide scrollbar for IE, Edge and Firefox */
+      .no-scrollbar {
+          -ms-overflow-style: none;  /* IE and Edge */
+          scrollbar-width: none;  /* Firefox */
+      }
+    }
+  }
